; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_script.c_exec_script.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_script.c_exec_script.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@exec_script.delimW = internal constant [2 x i8] c"\22\00", align 1
@.str = private unnamed_addr constant [28 x i8] c"Could not find script GUID\0A\00", align 1
@CO_E_CLASSSTRING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"No script host\0A\00", align 1
@E_FAIL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [28 x i8] c"script_host->parse == NULL\0A\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c">>>\0A\00", align 1
@SCRIPTTEXT_ISVISIBLE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c"<<<\0A\00", align 1
@.str.5 = private unnamed_addr constant [10 x i8] c"<<< %08x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @exec_script(i32* %0, i8* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @get_guid_from_language(i8* %14, i32* %12)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %4
  %18 = call i32 (i8*, ...) @WARN(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @CO_E_CLASSSTRING, align 4
  store i32 %19, i32* %5, align 4
  br label %56

20:                                               ; preds = %4
  %21 = load i32*, i32** %6, align 8
  %22 = call %struct.TYPE_3__* @get_script_host(i32* %21, i32* %12)
  store %struct.TYPE_3__* %22, %struct.TYPE_3__** %10, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %24 = icmp ne %struct.TYPE_3__* %23, null
  br i1 %24, label %28, label %25

25:                                               ; preds = %20
  %26 = call i32 @FIXME(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %27 = load i32, i32* @E_FAIL, align 4
  store i32 %27, i32* %5, align 4
  br label %56

28:                                               ; preds = %20
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %36, label %33

33:                                               ; preds = %28
  %34 = call i32 @FIXME(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  %35 = load i32, i32* @E_FAIL, align 4
  store i32 %35, i32* %5, align 4
  br label %56

36:                                               ; preds = %28
  %37 = call i32 @memset(i32* %11, i32 0, i32 4)
  %38 = call i32 @TRACE(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i8*, i8** %7, align 8
  %43 = load i32, i32* @SCRIPTTEXT_ISVISIBLE, align 4
  %44 = load i32*, i32** %9, align 8
  %45 = call i32 @IActiveScriptParse_ParseScriptText(i32 %41, i8* %42, i32* null, i32* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @exec_script.delimW, i64 0, i64 0), i32 0, i32 0, i32 %43, i32* %44, i32* %11)
  store i32 %45, i32* %13, align 4
  %46 = load i32, i32* %13, align 4
  %47 = call i64 @SUCCEEDED(i32 %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %36
  %50 = call i32 @TRACE(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  br label %54

51:                                               ; preds = %36
  %52 = load i32, i32* %13, align 4
  %53 = call i32 (i8*, ...) @WARN(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0), i32 %52)
  br label %54

54:                                               ; preds = %51, %49
  %55 = load i32, i32* %13, align 4
  store i32 %55, i32* %5, align 4
  br label %56

56:                                               ; preds = %54, %33, %25, %17
  %57 = load i32, i32* %5, align 4
  ret i32 %57
}

declare dso_local i32 @get_guid_from_language(i8*, i32*) #1

declare dso_local i32 @WARN(i8*, ...) #1

declare dso_local %struct.TYPE_3__* @get_script_host(i32*, i32*) #1

declare dso_local i32 @FIXME(i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @IActiveScriptParse_ParseScriptText(i32, i8*, i32*, i32*, i8*, i32, i32, i32, i32*, i32*) #1

declare dso_local i64 @SUCCEEDED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
